Added clear function mac